--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "env-cmd -f ./config/dev.env nodemon src/index.js",
-    "test": "env-cmd -f ./config/test.env node --experimental-vm-modules node_modules/jest/bin/jest.js"
+    "test": "env-cmd -f ./config/test.env node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand"
   },
   "jest": {
     "testEnvironment": "node"
